Se corrigió la ruta del formulario y se ignoró un intento fallido

--- a/M1U3/cv.html
+++ b/M1U3/cv.html
@@ -37,6 +37,6 @@
         <p>Me gusta tocar la guitarra</p>
         <p>No me gusta corregir mi código tantas veces</p>
 
-    <h4>Si querés contactarme podés completar el siguiente <a href="file:///C:/Users/Usuario/Desktop/Tareas%20Diplo%20Martes%202.0/FORMULARIO.html" target="_blank">FORMULARIO</a></h4>
+    <h4>Si querés contactarme podés completar el siguiente <a href="FORMULARIO.html" target="_blank">FORMULARIO</a></h4>
 </body>
 </html>
