se agregó el archivo "cv.css" y el respectivo link al archivo en "cv.html" además de una hoja de estilos en el archivo "cv.html"

--- a/M1U3/cv.html
+++ b/M1U3/cv.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV de Nombre y Apellido</title>
+    <link rel="stylesheet" href="cv.css">
 </head>
 <body>
     
@@ -16,27 +17,29 @@
     <h3>Domicilio: Calle Argentina 123</h3>
 
 
-    <h4>¿Qué series me gustan?:</h4>
+    <h4 style="color:darkolivegreen;">¿Qué series me gustan?:</h4>
     <ul>
-        <li>Titans</li>
-        <li>Flash</li>
-        <li>Game of Thrones</li>
+        <li style="color: cornflowerblue;">Titans</li>
+        <li style="color:rgba(255, 21, 0, 0.929)">Flash</li>
+        <li style="color: goldenrod">Game of Thrones</li>
     </ul>
 
 
     <h4>Top de pelis que más me gustaron:</h4>
     <ol>
-        <li>Interestellar</li>
-        <li>Star Wars Episodio III</li>
-        <li>The Batman</li>
+        <li style="color:darkslategray;">Interestellar</li>
+        <li style="color: crimson;">Star Wars Episodio III</li>
+        <li style="color: darkgray;">The Batman</li>
     </ol>
 
 
     <h4>Perfil:</h4>
+    <div id="caja">
         <p>Me gusta programar en html</p>
         <p>Me gusta tocar la guitarra</p>
         <p>No me gusta corregir mi código tantas veces</p>
-
+    </div>
+    
     <h4>Si querés contactarme podés completar el siguiente <a href="FORMULARIO.html" target="_blank">FORMULARIO</a></h4>
 </body>
 </html>
