--- a/M1U3/cv.html
+++ b/M1U3/cv.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV de Nombre y Apellido</title>
+    <link href="https: //fonts.googleapis.com/css2?family=Whisper&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="cv.css">
 </head>
 <body>
@@ -40,6 +44,6 @@
         <p>No me gusta corregir mi código tantas veces</p>
     </div>
     
-    <h4>Si querés contactarme podés completar el siguiente <a href="FORMULARIO.html" target="_blank">FORMULARIO</a></h4>
+    <h4><i class="fa-regular fa-star"></i>Si querés contactarme podés completar el siguiente <a href="FORMULARIO.html" target="_blank">FORMULARIO</a></h4>
 </body>
 </html>
